correct search depending on category. passing around codeIds after search for easy storage. fixed bug with done button not showing. refactored search.js.erb. refactored code to use add/removeClass instead of toggle for stability

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -148,7 +148,11 @@ li div:active {
     position: fixed;
 }
 
-.mainNewCode {
+#newMainCode .doneButton {
+    display: block;
+}
+
+#newMainCode {
     display: none;
 }
 
